@@ -1116,6 +1116,8 @@ x^12 + 2*x^11 + 4*x^10 + 4*x^9 + 4*x^8 + 2*x^7 - 8*x^5 - 17*x^4 - 16*x^3 - 8
 [1, 11/60, 1/24, 1/120, -1/120, -1/24, -11/60, -1]
 1.3407636701883001534150257403529284807 - 0.09169347814648177113546620833059
 8109324*I
+3.1415926535897932384626433832795028842*x^-1 + O(x^0)
+6.0268120396919401235462601927282855839
 0.037077104649480652945032138729501143624
 x^9 - 25/4*x^7 + 21/2*x^5 - 25/4*x^3 + x
 -0.0059589649895782378538355644158109773247*I
@@ -1581,4 +1583,4 @@ t, -6*t - 4, t + 2]
   ***   at top-level: ...,0);[F]=mfeigenbasis(mf);mfpow(F,3)
   ***                                             ^----------
   *** mfpow: sorry, changing cyclotomic fields in mf is not yet implemented.
-Total time spent: 16311
+Total time spent: 16214
